samples/_failures_safe/1761402599_3ae441_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d17ff145.c: In function ‘main’:
./samples/SAFE/__tmp_d17ff145.c:131:30: error: missing terminating " character
  131 |     add_log_entry(&analyzer, "202
      |                              ^~~~
./samples/SAFE/__tmp_d17ff145.c:131:5: error: expected expression at end of input
  131 |     add_log_entry(&analyzer, "202
      |     ^~~~~~~~~~~~~
./samples/SAFE/__tmp_d17ff145.c:131:5: error: too few arguments to function ‘add_log_entry’
./samples/SAFE/__tmp_d17ff145.c:50:5: note: declared here
   50 | int add_log_entry(struct LogAnalyzer *analyzer, const char *timestamp, const char *level, const char *message) {
      |     ^~~~~~~~~~~~~
./samples/SAFE/__tmp_d17ff145.c:131:5: error: expected declaration or statement at end of input
  131 |     add_log_entry(&analyzer, "202
      |     ^~~~~~~~~~~~~
